--- a/david_smith.htm
+++ b/david_smith.htm
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <link rel="canonical" href="https://bwestoz.github.io/david_smith.htm" />
     <title>The Jazz Guitar Society of Western Australia</title>
 
     <!-- Bootstrap -->
@@ -88,7 +89,7 @@
   <div class="row">
     <div class="col-sm-2"></div>
       <div class="col-sm-8">     
-      <p class="text-justify">David Smith was born in Sydney in 1954. David started playing guitar as a teenager and at 19 started playing professionally in rock bands. He got interested in jazz and was influenced by Tal Farlow, Jimmy Raney and John McLaughlin. He spent four years in the UK from l975-79 playing in various bands. He returned to Austalia and played at major jazz venues, In l986 he went to New York and gigged with Chuck Wayne, Vic Juris and his friend Jack Wilkins who he made a CD with. He is regarded as one of Australia’s best jazz guitarists and he teaches at the Australian Institute of Music in Sydney.</p>
+      <p class="text-justify">David Smith was born in Sydney in 1954. David started playing guitar as a teenager and at 19 started playing professionally in rock bands. He got interested in jazz and was influenced by Tal Farlow, Jimmy Raney and John McLaughlin. He spent four years in the UK from l975-79 playing in various bands. He returned to Austalia and played at major jazz venues, In l986 he went to New York and gigged with Chuck Wayne, Vic Juris and his friend Jack Wilkins who he made a CD with. He is regarded as one of Australiaâ€™s best jazz guitarists and he teaches at the Australian Institute of Music in Sydney.</p>
       </div>
     <div class="col-sm-2"></div>
   </div>
